{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 207,
  "lineage": "02c90ec9-e1ed-1488-0629-e8cac5a5474e",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:987109199685:listener/app/hathi-alb-dev/65915a028caf0855/1ed6ed1f9a1648ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:987109199685:targetgroup/hathi-tg-dev/11cec68ddbff45fc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:987109199685:listener/app/hathi-alb-dev/65915a028caf0855/1ed6ed1f9a1648ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:987109199685:loadbalancer/app/hathi-alb-dev/65915a028caf0855",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb_target_group.main",
            "module.alb.aws_lb.main",
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:987109199685:targetgroup/hathi-tg-dev/11cec68ddbff45fc",
            "arn_suffix": "targetgroup/hathi-tg-dev/11cec68ddbff45fc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 150,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:987109199685:targetgroup/hathi-tg-dev/11cec68ddbff45fc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "hathi-tg-dev",
            "port": 5001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "hathi-tg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hathi-tg-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01fc5789a15da6cc2"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:987109199685:loadbalancer/app/hathi-alb-dev/65915a028caf0855",
            "arn_suffix": "app/hathi-alb-dev/65915a028caf0855",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hathi-alb-dev-7113829.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:987109199685:loadbalancer/app/hathi-alb-dev/65915a028caf0855",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hathi-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-008f8e66e39d21d8e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0046f6fd53ed3bdc8"
              },
              {
                "subnet_id": "subnet-0edccafc6fde22986"
              }
            ],
            "subnets": [
              "subnet-0046f6fd53ed3bdc8",
              "subnet-0edccafc6fde22986"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "hathi-alb-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hathi-alb-dev"
            },
            "vpc_id": "vpc-01fc5789a15da6cc2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:987109199685:security-group/sg-008f8e66e39d21d8e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-008f8e66e39d21d8e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hathi-sg-alb-dev",
            "name_prefix": "",
            "owner_id": "987109199685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "hathi-sg-alb-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hathi-sg-alb-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fc5789a15da6cc2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:987109199685:security-group/sg-066bd5fa91034b36b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066bd5fa91034b36b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-008f8e66e39d21d8e"
                ],
                "self": false,
                "to_port": 5001
              }
            ],
            "name": "hathi-sg-task-dev",
            "name_prefix": "",
            "owner_id": "987109199685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "hathi-sg-task-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "hathi-sg-task-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fc5789a15da6cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}